# src/handlers/collection.go
@@ -10,8 +10,14 @@ type UserService interface {
 	Login(request contract.LoginInput) (token string, err error)
 	Get(id int) (response *contract.RegisterOutput, err error)
 	GetList(request *contract.PageRequest) (response []contract.RegisterOutput, err error)
+	Update(id int, request contract.UpdateInput) (response *contract.RegisterOutput, err error)
+	Delete(id int) (err error)
 }
 
 type TaskService interface {
 	Create(request contract.TaskInput) (response *entities.Task, err error)
+	GetList(request *contract.PageRequest) (response []entities.Task, err error)
+	Get(id int) (response *entities.Task, err error)
+	Update(id int, request contract.TaskInput) (response *entities.Task, err error)
+	Delete(id int) (err error)
 }
